# BitCore

./: .gitignore  README.md  pyproject.toml  requirements.txt  scratch.py
examples/: README.md  basic_usage.py  convert_from_linear.py  deployment.py  different_quantizers.py  input_shapes.py  simple_model.py  training.py
src/bitcore/: __init__.py  bitconv2d.py  bitconvtranspose2d.py  bitlinear.py  quantizers.py
src/bitcore/bitlinear/: __init__.py  layer.py  quantizer.py
src/bitcore/bnn/bitlayers/: base.py  bitconv2d.py  bitlinear.py
src/bitcore/bnn/bitquantizer/: QUANT_TYPES.md  act.py  registry.py  weight.py
src/bitcore/bnn/functional/: __init__.py  bitconv2d.py  bitlinear.py
src/bitlab/bnn/: __init__.py
src/bitlab/bnn/bitlayers/: __init__.py  base.py  bitconv2d.py  bitlinear.py
src/bitlab/bnn/bitquantizer/: __init__.py  act.py  quantizers.py
src/bitlab/bnn/functional/: bitconv2d.py
tests/: test_bitconv2d.py  test_bitconvtranspose2d.py  test_bitlinear.py
tests/unit/: test_bitlinear.py
