[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitlab-core"
version = "0.1.0"
description = "Core binary neural network components for BitLab."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "BitLab Contributors" }
]
dependencies = []

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["bitlab*" ]
