[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitcore"
version = "0.1.0"
description = "Binary neural network layers with bitops deployment helpers."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Oliver Grainge"}]
dependencies = [
    "torch>=2.0.0",
]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/olivergrainge/BitCore"
Repository = "https://github.com/olivergrainge/BitCore"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

